# ORB-SIFT---Object-Detection

./: orb_video_recognition.ipynb  pyproject.toml  sift_video_recognition.ipynb
